--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,16 @@ li a:hover {
   text-decoration: underline !important;
 }
 
+.font-big {
+  font-weight: 500;
+}
+
+.font-lead {
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 1.5em;
+}
+
 .z-toppest {
   z-index: 100;
 }
