--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,11 @@ li a:hover {
 .opacity-lower {
   opacity: 0.2;
 }
+
+@media (min-width: 1440px) {
+  .container-page {
+    max-width: 1400px;
+    margin-left: auto !important;
+    margin-right: auto !important;
+  }
+}
