--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,12 @@ header a {
   cursor: pointer;
 }
 
+.bg-azure {
+  background: #dae0e6;
+}
+
 .bg-grey {
-  background: #fafafa;
+  background: #fefefeaa;
 }
 
 .bg-violet {
@@ -51,14 +55,26 @@ header a {
 }
 
 .font-big {
-  font-weight: 500;
+  font-weight: 600;
   font-size: 2.5rem;
 }
 
 .font-lead {
   font-size: 1.25rem;
   font-weight: 400;
-  line-height: 1.5em;
+  line-height: 1.5rem;
+  opacity: 0.8;
+}
+
+.font-medium {
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+}
+
+.font-text {
+  font-size: 1rem;
+  font-weight: 400;
 }
 
 .text-underline {
