About US Page changes

--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,11 @@ header a {
 }
 
 .bg-azure {
-  background: #dae0e6;
+  background: #fefefe;
 }
 
 .bg-grey {
-  background: #fefefeaa;
+  background: #fefefe;
 }
 
 .bg-violet {
